add_subdirectory(disk)
add_subdirectory(diskann)
add_subdirectory(core)
add_subdirectory(executor)
add_subdirectory(golden)
add_subdirectory(index)
add_subdirectory(recovery)
add_subdirectory(simd)
add_subdirectory(space)
add_subdirectory(storage)
add_subdirectory(utils)
add_subdirectory(vamana)
if(NOT ALAYA_ENABLE_LASER)
  add_subdirectory(build_matrix)
endif()
if(ALAYA_ENABLE_LASER)
  add_subdirectory(laser)
endif()
