add_executable(diskann_searcher_test ${CMAKE_CURRENT_SOURCE_DIR}/diskann/diskann_searcher_test.cpp)
add_executable(diskann_builder_test ${CMAKE_CURRENT_SOURCE_DIR}/diskann/diskann_builder_test.cpp)
add_executable(kmeans_partitioner_test ${CMAKE_CURRENT_SOURCE_DIR}/diskann/kmeans_partitioner_test.cpp)
add_executable(shard_vamana_builder_test ${CMAKE_CURRENT_SOURCE_DIR}/diskann/shard_vamana_builder_test.cpp)
add_executable(cross_shard_merger_test ${CMAKE_CURRENT_SOURCE_DIR}/diskann/cross_shard_merger_test.cpp)
add_executable(deleted_neighbor_cache_test ${CMAKE_CURRENT_SOURCE_DIR}/diskann/deleted_neighbor_cache_test.cpp)
add_executable(fusion_graph_test ${CMAKE_CURRENT_SOURCE_DIR}/fusion_graph_test.cpp)
add_executable(graph_test ${CMAKE_CURRENT_SOURCE_DIR}/graph_test.cpp)
add_executable(hnsw_test ${CMAKE_CURRENT_SOURCE_DIR}/hnsw_test.cpp)
add_executable(inserted_edge_cache_test ${CMAKE_CURRENT_SOURCE_DIR}/diskann/inserted_edge_cache_test.cpp)
add_executable(nndescent_test ${CMAKE_CURRENT_SOURCE_DIR}/nndescent_test.cpp)
add_executable(nsg_test ${CMAKE_CURRENT_SOURCE_DIR}/nsg_test.cpp)
add_executable(rabitq_test ${CMAKE_CURRENT_SOURCE_DIR}/rabitq_test.cpp)
if(LASER_AVAILABLE)
  add_executable(laser_index_test ${CMAKE_CURRENT_SOURCE_DIR}/laser_index_test.cpp)
  add_executable(laser_medoid_generator_test ${CMAKE_CURRENT_SOURCE_DIR}/laser_medoid_generator_test.cpp)
  add_executable(laser_vamana_format_test ${CMAKE_CURRENT_SOURCE_DIR}/laser_vamana_format_test.cpp)
  add_executable(laser_builder_test ${CMAKE_CURRENT_SOURCE_DIR}/laser_builder_test.cpp)
  add_executable(laser_file_readers_test ${CMAKE_CURRENT_SOURCE_DIR}/laser_file_readers_test.cpp)

  target_link_libraries(diskann_searcher_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(diskann_builder_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(kmeans_partitioner_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(shard_vamana_builder_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(cross_shard_merger_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(fusion_graph_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(graph_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(hnsw_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(inserted_edge_cache_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(nndescent_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(nsg_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(rabitq_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(deleted_neighbor_cache_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(laser_index_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(laser_medoid_generator_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(laser_vamana_format_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(laser_builder_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
  target_link_libraries(laser_file_readers_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
endif()

add_coverage_to_target(diskann_searcher_test)
add_coverage_to_target(diskann_builder_test)
add_coverage_to_target(kmeans_partitioner_test)
add_coverage_to_target(shard_vamana_builder_test)
add_coverage_to_target(cross_shard_merger_test)
add_coverage_to_target(fusion_graph_test)
add_coverage_to_target(graph_test)
add_coverage_to_target(hnsw_test)
add_coverage_to_target(inserted_edge_cache_test)
add_coverage_to_target(nndescent_test)
add_coverage_to_target(nsg_test)
add_coverage_to_target(rabitq_test)
add_coverage_to_target(deleted_neighbor_cache_test)
if(LASER_AVAILABLE)
  add_coverage_to_target(laser_index_test)
  add_coverage_to_target(laser_medoid_generator_test)
  add_coverage_to_target(laser_vamana_format_test)
  add_coverage_to_target(laser_builder_test)
  add_coverage_to_target(laser_file_readers_test)
endif()

add_test(NAME index_test_diskann_searcher COMMAND $<TARGET_FILE:diskann_searcher_test>)
add_test(NAME index_test_diskann_builder COMMAND $<TARGET_FILE:diskann_builder_test>)
add_test(NAME index_test_kmeans_partitioner COMMAND $<TARGET_FILE:kmeans_partitioner_test>)
add_test(NAME index_test_shard_vamana_builder COMMAND $<TARGET_FILE:shard_vamana_builder_test>)
add_test(NAME index_test_cross_shard_merger COMMAND $<TARGET_FILE:cross_shard_merger_test>)
add_test(NAME index_test_inserted_edge_cache COMMAND $<TARGET_FILE:inserted_edge_cache_test>)
add_test(NAME index_test_fusion_graph COMMAND $<TARGET_FILE:fusion_graph_test>)
add_test(NAME index_test_graph COMMAND $<TARGET_FILE:graph_test>)
add_test(NAME index_test_hnsw COMMAND $<TARGET_FILE:hnsw_test>)
add_test(NAME index_test_nndescent COMMAND $<TARGET_FILE:nndescent_test>)
add_test(NAME index_test_nsg COMMAND $<TARGET_FILE:nsg_test>)
add_test(NAME index_test_rabitq COMMAND $<TARGET_FILE:rabitq_test>)
add_test(NAME index_test_deleted_neighbor_cache COMMAND $<TARGET_FILE:deleted_neighbor_cache_test>)
if(LASER_AVAILABLE)
  add_test(NAME index_test_laser COMMAND $<TARGET_FILE:laser_index_test>)
  add_test(NAME index_test_laser_medoid_generator COMMAND $<TARGET_FILE:laser_medoid_generator_test>)
  add_test(NAME index_test_laser_vamana_format COMMAND $<TARGET_FILE:laser_vamana_format_test>)
  add_test(NAME index_test_laser_builder COMMAND $<TARGET_FILE:laser_builder_test>)
  add_test(NAME index_test_laser_file_readers COMMAND $<TARGET_FILE:laser_file_readers_test>)
endif()

# Stress tests: DISABLED_ tests that can be run explicitly via `ctest -L stress`
add_test(NAME diskann_searcher_stress COMMAND $<TARGET_FILE:diskann_searcher_test> --gtest_also_run_disabled_tests
                                              --gtest_filter="MultiWorkerTest.DISABLED_*"
)
set_tests_properties(diskann_searcher_stress PROPERTIES LABELS "stress")
