add_executable(l2_sqr_test ${CMAKE_CURRENT_SOURCE_DIR}/l2_sqr_test.cpp)
add_executable(ip_test ${CMAKE_CURRENT_SOURCE_DIR}/ip_test.cpp)
add_executable(fht_test ${CMAKE_CURRENT_SOURCE_DIR}/fht_test.cpp)
add_executable(l2_sqr_full_benchmark ${CMAKE_CURRENT_SOURCE_DIR}/l2_sqr_full_benchmark.cpp)
add_executable(l2_sqr_sq8_benchmark ${CMAKE_CURRENT_SOURCE_DIR}/l2_sqr_sq8_benchmark.cpp)
add_executable(l2_sqr_sq4_benchmark ${CMAKE_CURRENT_SOURCE_DIR}/l2_sqr_sq4_benchmark.cpp)
add_executable(ip_full_benchmark ${CMAKE_CURRENT_SOURCE_DIR}/ip_full_benchmark.cpp)
add_executable(ip_sq8_benchmark ${CMAKE_CURRENT_SOURCE_DIR}/ip_sq8_benchmark.cpp)
add_executable(ip_sq4_benchmark ${CMAKE_CURRENT_SOURCE_DIR}/ip_sq4_benchmark.cpp)
add_executable(fht_benchmark ${CMAKE_CURRENT_SOURCE_DIR}/fht_benchmark.cpp)

target_link_libraries(l2_sqr_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(ip_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(fht_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(l2_sqr_full_benchmark PRIVATE ${THIRD_PARTY_LIBS})
target_link_libraries(l2_sqr_sq8_benchmark PRIVATE ${THIRD_PARTY_LIBS})
target_link_libraries(l2_sqr_sq4_benchmark PRIVATE ${THIRD_PARTY_LIBS})
target_link_libraries(ip_full_benchmark PRIVATE ${THIRD_PARTY_LIBS})
target_link_libraries(ip_sq8_benchmark PRIVATE ${THIRD_PARTY_LIBS})
target_link_libraries(ip_sq4_benchmark PRIVATE ${THIRD_PARTY_LIBS})
target_link_libraries(fht_benchmark PRIVATE ${THIRD_PARTY_LIBS})
add_coverage_to_target(l2_sqr_test)
add_coverage_to_target(ip_test)
add_coverage_to_target(fht_test)

add_test(NAME simd_test_l2_sqr COMMAND $<TARGET_FILE:l2_sqr_test>)
add_test(NAME simd_test_ip COMMAND $<TARGET_FILE:ip_test>)
add_test(NAME simd_test_fht COMMAND $<TARGET_FILE:fht_test>)
