add_executable(quant_test ${CMAKE_CURRENT_SOURCE_DIR}/quant/sq4_test.cpp)
add_executable(raw_space_test ${CMAKE_CURRENT_SOURCE_DIR}/raw_space_test.cpp)
add_executable(sq4_space_test ${CMAKE_CURRENT_SOURCE_DIR}/sq4_space_test.cpp)
add_executable(sq8_space_test ${CMAKE_CURRENT_SOURCE_DIR}/sq8_space_test.cpp)
add_executable(rabitq_space_test ${CMAKE_CURRENT_SOURCE_DIR}/rabitq_space_test.cpp)

target_link_libraries(quant_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(raw_space_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(sq4_space_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(sq8_space_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(rabitq_space_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})

add_test(NAME space_test_quant COMMAND $<TARGET_FILE:quant_test>)
add_test(NAME space_test_raw_space COMMAND $<TARGET_FILE:raw_space_test>)
add_test(NAME space_test_sq4_space COMMAND $<TARGET_FILE:sq4_space_test>)
add_test(NAME space_test_sq8_space COMMAND $<TARGET_FILE:sq8_space_test>)
add_test(NAME space_test_rabitq_space COMMAND $<TARGET_FILE:rabitq_space_test>)
